--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #f1f2f5;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f3f3f8;
 }
 
 body {
